--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
@@ -74,7 +72,7 @@ p {
   padding-top: 20px;
 }
 
-/* styles.css */
+/* comments */
 
 #yorumlar {
   margin-bottom: 20px;
@@ -118,51 +116,6 @@ p {
   margin-bottom: 10px;
 }
 
-#banner{
-    height:600px;
-    background-image: url("../images/image1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-
-#black{
-    height: 600px;
-    background-color: black;
-    opacity: 0.5;
-}
-.success-message,
-.failure-message {
-  position: fixed;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 20px;
-  background-color: #32CD32; /* Başarı mesajı için yeşil renk */
-  color: #fff;
-  border-radius: 5px;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.failure-message {
-  background-color: #FF0000; /* Başarısızlık mesajı için kırmızı renk */
-}
-
-.success-message.hide,
-.failure-message.hide {
-  opacity: 0;
-}
-
-
-#icerik{
-    position: absolute;
-    top: 50%;
-    left: 40%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 20px;
-}
-
 #yorum-ekle-form textarea {
   width: 100%;
   padding: 5px;
@@ -179,4 +132,59 @@ p {
 
 #yorum-ekle-form button:hover {
   background-color: #45a049;
+}
+/* Banner Photo */
+#banner {
+  height: 600px;
+  background-image: url('../images/image1.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+#black {
+  height: 600px;
+  background-color: black;
+  opacity: 0.5;
+}
+.success-message,
+.failure-message {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: #32cd32; /* Green For Success */
+  color: #fff;
+  border-radius: 5px;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.failure-message {
+  background-color: #ff0000; /* Red For Failure */
+}
+
+.success-message.hide,
+.failure-message.hide {
+  opacity: 0;
+}
+
+#icerik {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 20px;
+}
+
+/* Footer */
+#footer {
+  background-color: #ebebeb;
+  padding: 10px;
+  text-align: center;
+}
+
+#footer p {
+  margin: 0;
 }
